wip CRUD implementation
